projects section gap fix

--- a/src/pages/Home/Sections/Projects/index.module.scss
+++ b/src/pages/Home/Sections/Projects/index.module.scss
@@ -2,5 +2,5 @@
 @use "@Styles/utils.module.scss";
 
 .project-cards-container {
-  @apply flex flex-col gap-24;
+  @apply flex flex-col gap-8 lg:gap-24;
 }
